--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Samuel Denani",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
+    "start": "ts-node-dev src/index.ts"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
