--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "start": "ts-node-dev src/index.ts"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
     "discord.js": "^12.5.1",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.20",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22"
   }
 }
