--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "@types/lodash": "^4.14.168",
     "discord.js": "^12.5.1",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.20",
+    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
