--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.22",
     "discord.js": "^12.5.1",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.20",
@@ -19,7 +20,5 @@
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
-  "devDependencies": {
-    "@types/node": "^14.14.22"
-  }
+  "devDependencies": {}
 }
