--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@types/ioredis": "^4.19.3",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "discord.js": "^12.5.1",
     "fs": "^0.0.1-security",
+    "ioredis": "^4.19.4",
     "lodash": "^4.17.20",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
