--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "version": "0.0.1",
   "description": "A simple Discord bot to use with friends.",
-  "main": "main.ts",
+  "main": "src/index.ts",
   "repository": "https://github.com/SamuelDenani/discord-bot",
   "author": "Samuel Denani",
   "license": "MIT",
@@ -12,12 +12,10 @@
   },
   "dependencies": {
     "@types/ioredis": "^4.19.3",
-    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "discord.js": "^12.5.1",
     "fs": "^0.0.1-security",
     "ioredis": "^4.19.4",
-    "lodash": "^4.17.20",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
