--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/ioredis": "^4.19.3",
     "@types/node": "^14.14.22",
+    "axios": "^0.21.1",
     "discord.js": "^12.5.1",
     "fs": "^0.0.1-security",
     "ioredis": "^4.19.4",
