--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^4.19.4",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
+    "twitter-api-client": "^1.3.8",
     "typescript": "^4.1.3"
   },
   "devDependencies": {}
